bundle update localeapp & localeapp pull

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1394,6 +1394,9 @@ ar:
           message: 
           name: 
       search_form:
+        faq:
+          query: 
+          search_location: 
         home:
           query: 
           search_location: 
@@ -1404,6 +1407,8 @@ ar:
           query: 
           search_location: 
       subscription:
+        faq:
+          email: 
         home:
           email: 
         index:
