--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1405,6 +1405,9 @@ fr:
           message: 
           name: 
       search_form:
+        faq:
+          query: 
+          search_location: 
         home:
           query: 
           search_location: 
@@ -1415,6 +1418,8 @@ fr:
           query: 
           search_location: 
       subscription:
+        faq:
+          email: 
         home:
           email: 
         index:
