--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1388,6 +1388,9 @@ pl:
           message: 
           name: 
       search_form:
+        faq:
+          query: 
+          search_location: 
         home:
           query: 
           search_location: 
@@ -1398,6 +1401,8 @@ pl:
           query: 
           search_location: 
       subscription:
+        faq:
+          email: 
         home:
           email: 
         index:
