--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -184,12 +184,23 @@ ru:
           answer: "В <b>clarat refugees</b> ты найдешь множество предложений помощи. Для тебя мы их упорядочили:\n<p>\n<ul>\n<li>\n<b>Параграф - убежище и право</b><br>\nЗдесь ты найдешь помощь, если у тебя есть вопросы по процессу рассмотрения заявлений для предоставления временного убежища или статуса беженца. Не важно, перед поачей заявления, во время или после. Например также, если у тебя право на кратковременное ограниченное пребывание в стране. Или если у тебя вопросы по немецким законам. Также несовершентнолетние бежнецы найдут здесь поддержку. \n</li>\n<br>\n<li>\n<b>Детская коляска - семейные проблемы</b><br>\nЗдесь ты найдешь помощь, если в твоей семье есть проблемы. Например при ссорах. И при многих других, как например тех, с которыми сталкиваешься, когда взролеешь. Либо воспитание детей. Здесь найдется помощь для каждогов  семье. Так же здесь есть много помощи детям и родителям.\n</li>\n<br>\n<li>\n<b>Сердце - здоровье</b><br>\nЗдесь ты найдешь помощь, если ты болеешь. Либо во время беременности. Ты также найдешь здесь помощь, если тебе плохо из-за войны и пыток. Либо если ты инвалид. Здесь ты найдешь врачей и психологов, которые помогают беженцам.\n</li>\n<br>\n<li>\n<b>Книга - учеба и работа</b><br>\nЗдесь ты найдешь помощь, если у тебя есть вопросы относительно учебы и работы. Нарпимер по детским садикам и школам. Или если ты хочешь знать, как ты можешь со статусом бежена здесь получить образование. Или если ты ищешь место профессиональной подготовки или работы. Так же ты найдешь здесь много разных курсов немецкого языка и курсы интеграции, которые ты можешь пройти как беженец. \n</li>\n<br>\n<li>\n<b>Указатель - жизнь в Германии</b><br>\nЗдесь ты найдешь помощь, если у тебя проблемы с ведомствами и учреждениями. Например если ты не знаешь немецкого языка, тогда здесь ты найдешь кого-нибудь, кто для тебя переведет. Либо кого-то, кто с тобой сходит в это учреждение. Также ты найдешь здесь и другую помощь - мы покажем тебе, например, места, где можно получить еду или мебель, одежду. И ты найдешь здесь возможности познакомитсья с другими людьми. Например в спортивном кружке или на курсах готовки.\n</li>\n<br>\n<li>\n<b>Кулак - насилие</b><br>\nЗдесь ты найдешь помощь, например если тебя кто-то ударил. Или во время войны ты подвергался пыткам. Также ты найдешь здесь помощь, если ты хочешь выйти из исламистской группировки.\n</li>\n<br>\n<li>\n<b>Молния - острая необходимость</b><br>\nЗдесь ты быстро найдешь помощь, если ты в крайней нужде или беде. В предложениях помощи, где стоит Днем и Ночью, ты можешь обращаться в любое время суток.\n</li>\n</ul>\n</p>"
           question: "По каким темам могу я найти помощь в clarat refugees?"
         question_4:
-          answer: 
-          question: 
+          answer: "На главной странице справа ты увидишь символ молнии. Если ты на него нажмешь, ты увидишь полный список возможностей поддержки в критических ситуациях, т.е. если тебе нужна срочная помощь.  В предложениях помощи, где стоит <b>Днем и Ночью</b>, ты можешь обращаться в любое время суток. Если тебе не хочется выходить из дома, тебе так же могут помочь по телефону или интернет."
+          question: "Как быстро найти помощь, если я в тяжелой ситуации?"
         question_5:
           anchor: 
-          answer: 
-          question: 
+          answer: |-
+            Есть два способа, как ты можешь нужную для тебя помощь найти:
+            <p>
+            <ul>
+            <li>
+            Если ты знаешь как сформулировать или назвать свою проблему, тогда просто впиши ее в поле “<b>ЧТО?</b>” на главной странице. Затем впиши в поле “<b>ГДЕ?</b>”, место где ты эту помощь ищешь. Либо кликни в поле “<b>ГДЕ?</b>” и щатем нажми “<b>Использовать мое местоположение</b>”. Затем нажми на исмвол лупы и найди помощь рядом с тобой.
+            </li>
+            <li>
+            Если ты не знаешь, как точно назвать твою проблему, попробуй “<b>Поиск по категориям</b>”. Если у тебя, например проблемы с домашними заданиями, нажми на книгу. С левой стороны ты увидешь много словпо теме “Учеба и работа”, на которые ты можешь нажать. Затем впиши в поле “<b>ГДЕ?</b>”, место где ты эту помощь ищешь. Либо кликни в поле “<b>ГДЕ?</b>” и щатем нажми “<b>Использовать мое местоположение</b>”. Затем нажми на исмвол лупы и найди помощь рядом с тобой.
+            </li>
+            </ul>
+            </p>
+          question: "Как мне найти нужную для меня помощь?"
         question_6:
           answer: 
           question: 
@@ -1308,6 +1319,9 @@ ru:
           message: 
           name: 
       search_form:
+        faq:
+          query: 
+          search_location: 
         home:
           query: 
           search_location: 
@@ -1318,6 +1332,8 @@ ru:
           query: 
           search_location: 
       subscription:
+        faq:
+          email: 
         home:
           email: 
         index:
