--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -114,15 +114,15 @@ ar:
         question_10:
           answer: 
           link_1:
-            class: 
+            class: FAQ_anchor_link
             name: 
             url: 
             var: 
           link_2:
-            name: 
-            target: 
-            url: 
-            var: 
+            name: post@clarat.org
+            target: blank_
+            url: mailto:post@clarat.org
+            var: mailto_clarat
           question: 
         question_11:
           answer: 
@@ -155,10 +155,10 @@ ar:
         question_9:
           answer: 
           link_1:
-            class: 
+            class: FAQ_anchor_link
             name: 
             url: 
-            var: 
+            var: ref_to_how_to_find_right_help
           question: 
       section_3:
         heading: 
@@ -166,24 +166,24 @@ ar:
           answer: 
           question: 
         question_2:
-          answer: 
-          question: 
+          answer: NOTRANSLATE
+          question: NOTRANSLATE
         question_3:
-          answer: 
-          question: 
+          answer: NOTRANSLATE
+          question: NOTRANSLATE
         question_4:
           answer: 
           question: 
         question_5:
-          answer: NOTRANSLATE
-          question: NOTRANSLATE
+          answer: 
+          question: 
         question_6:
-          answer: NOTRANSLATE
-          question: NOTRANSLATE
+          answer: 
+          question: 
       section_4:
         heading: 
         question_1:
-          anchor: 
+          anchor: how_many_languages
           answer: 
           question: 
         question_2:
@@ -206,10 +206,10 @@ ar:
         question_4:
           answer: 
           link_1:
-            name: 
-            target: 
-            url: 
-            var: 
+            name: post@clarat.org
+            target: blank_
+            url: mailto:post@clarat.org
+            var: mailto_clarat
           question: 
         question_5:
           answer: 
@@ -220,23 +220,23 @@ ar:
         question_7:
           answer: 
           link_1:
-            name: 
-            target: 
-            url: 
-            var: 
+            name: post@clarat.org
+            target: blank_
+            url: mailto:post@clarat.org
+            var: mailto_clarat
           question: 
         question_8:
           answer: 
           link_1:
-            class: 
+            class: FAQ_anchor_link
             name: 
             url: 
-            var: 
+            var: ref_to_who_finds_help
           link_2:
-            name: 
-            target: 
-            url: 
-            var: 
+            name: post@clarat.org
+            target: blank_
+            url: mailto:post@clarat.org
+            var: mailto_clarat
           question: 
   conf:
     current_location: "موقعي"
@@ -284,10 +284,6 @@ ar:
         لقد قمت بنجاح بإلغاء تسجيلك من الحصول على إشعارات أخرى
         (<a href="%{subscribe_href}">إعادة التسجيل</a>)
   enumerize:
-    required:
-      html: 
-      mark: 
-      text: 
     search_form:
       age:
         '0': 
@@ -486,6 +482,8 @@ ar:
       placeholder_words:
         family: 
         refugees: 
+    routes:
+      faq: 
     search:
       form_less_label: "اخفاء خيارات البحث"
       form_more_label: "عرض خيارات البحث"
@@ -505,6 +503,9 @@ ar:
       enclosing: "تم العثور على"
       faq_anchor: "هنا"
       faq_text: "تجد الأسئلة الشائعة حول البحث وكذلك الإجابات "
+      language_explanation:
+        connector: 
+        text: 
       map:
         cooperation: 
         enlarge_map: "تكبير الخريطة"
@@ -519,13 +520,70 @@ ar:
         other: "%{count} استشارات  هاتفية و عروض مساعدة عن طريق الإنترنت"
         zero: "لا توجد استشارات  هاتفية أو عروض مساعدة عن طريق الإنترنت"
       show_personal: "عرض عروض مكانية أكثر"
+    shared:
+      current_and_original_locale:
+        "'150'": 
+        "'326'": 
+        "'568'": 
+        "'639'": 
+        '150': 
+        '326': 
+        '568': 
+        '639': 
+        amh: 
+        ara: 
+        aze: 
+        bel: 
+        ben: 
+        bos: 
+        bul: 
+        deu: 
+        ell: 
+        eng: 
+        fas: 
+        fra: 
+        hin: 
+        hrv: 
+        hun: 
+        ita: 
+        kik: 
+        kur: 
+        lav: 
+        lit: 
+        ltz: 
+        luo: 
+        mkd: 
+        mul: 
+        nor: 
+        pol: 
+        por: 
+        rom: 
+        ron: 
+        rus: 
+        snk: 
+        spa: 
+        sqi: 
+        srp: 
+        swa: 
+        swe: 
+        tam: 
+        tel: 
+        tgk: 
+        tha: 
+        tuk: 
+        tur: 
+        urd: 
+        uzb: 
+        vie: 
+        wol: 
+        zho: 
+        zza: 
     single_search_result:
       encounters:
         chat: "دردشة"
         email: "بريد اليكتروني"
         forum: "منتدى"
         hotline: "تليفون"
-        list: 
         online-course: "دورة بالإنترنت"
         personal: "ذاتيا"
         portal: "قائمة العناوين"
@@ -610,62 +668,14 @@ ar:
           exclusive_gender:
             boys_only: "فقط للصبيان والرجال"
             girls_only: "فقط للبنات والسيدات"
-          language:
-            '150': "لغة الإشارة الألمانية"
-            '326': "أوكراني"
-            '568': "هولندي"
-            '639': "داري"
-            amh: "الأمهرية"
-            ara: "عربي"
-            aze: "أذربيجاني"
-            bel: "البيلاروسية"
-            ben: "بنغالي"
-            bos: "بوسني"
-            bul: "بلغاري"
-            deu: "ألماني"
-            ell: "يوناني"
-            eng: "إنجليزي"
-            fas: "فارسي"
-            fra: "فرنسي"
-            hin: "هندي"
-            hrv: "كرواتي"
-            hun: "مجري"
-            ita: "ايطالي"
-            kik: "كيكويو"
-            kur: "كردي"
-            lav: "لاتفية"
-            lit: "الليتوانية"
-            ltz: "لكسمبورجي"
-            luo: "لغة اللو"
-            mkd: "مقدونية"
-            mul: "لغات أخرى حسب الطلب"
-            nor: "نرويجي"
-            pol: "بولندي"
-            por: "برتغالي"
-            rom: "رومانيَ"
-            ron: "روماني"
-            rus: "روسي"
-            snk: "سونينكي"
-            spa: "أسباني"
-            sqi: "ألباني"
-            srp: "صربي"
-            swa: "اللغة السواحيلي"
-            swe: "سويدي"
-            tam: "التاميل"
-            tel: "التيلوجو"
-            tgk: "الطاجيكية"
-            tha: "تايلاندي"
-            tuk: "تركمان"
-            tur: "تركي"
-            urd: "أوردي"
-            uzb: "الأوزبكي"
-            vie: "فيتنامي"
-            wol: "الولوف"
-            zho: "صيني"
-            zza: "زازا"
           target_audience:
             acquaintances: "للمعارف والأقارب"
             children: "للأطفال والشباب"
+            family_acquaintances: 
+            family_children: 
+            family_nuclear_family: 
+            family_parents: 
+            family_pregnant_woman: 
             nuclear_family: "للأسر"
             parents: "للآباء"
             pregnant_woman: "للحوامل"
@@ -746,7 +756,7 @@ ar:
           long: "عروض خاصة بموضوع ...."
           short: "عروض  مساعدة ل.."
     show:
-      last_updated: "آخر إدخال"
+      last_update: "آخر إدخال"
       next_steps:
         code_word: 
         heading: 
@@ -999,181 +1009,6 @@ ar:
         </p>
       title: "إرشادات قانونية"
     faq:
-      heading: 
-      section_four:
-        answer_eight: 
-        answer_eight_bullet_one: 
-        answer_eight_bullet_two: 
-        answer_five: 
-        answer_four: 
-        answer_one: 
-        answer_one_bullet_five: 
-        answer_one_bullet_four: 
-        answer_one_bullet_one: 
-        answer_one_bullet_six: 
-        answer_one_bullet_three: 
-        answer_one_bullet_two: 
-        answer_seven: 
-        answer_six: 
-        answer_six_bullet_five: 
-        answer_six_bullet_four: 
-        answer_six_bullet_one: 
-        answer_six_bullet_six: 
-        answer_six_bullet_three: 
-        answer_six_bullet_two: 
-        answer_three: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_five: 
-        question_four: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_three: 
-        question_two: 
-      section_one:
-        answer_eight: 
-        answer_eighteen: 
-        answer_eleven: 
-        answer_fifteen: 
-        answer_five: 
-        answer_four: 
-        answer_fourteen: 
-        answer_nine: 
-        answer_nineteen: 
-        answer_one: 
-        answer_seven: 
-        answer_seventeen: 
-        answer_six: 
-        answer_sixteen: 
-        answer_ten: 
-        answer_thirteen: 
-        answer_three: 
-        answer_twelve: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_eighteen: 
-        question_eleven: 
-        question_fifteen: 
-        question_five: 
-        question_four: 
-        question_fourteen: 
-        question_nine: 
-        question_nineteen: 
-        question_one: 
-        question_seven: 
-        question_seventeen: 
-        question_six: 
-        question_sixteen: 
-        question_ten: 
-        question_thirteen: 
-        question_three: 
-        question_twelve: 
-        question_two: 
-      section_three:
-        answer_eight: 
-        answer_five: 
-        answer_four: 
-        answer_nine: 
-        answer_one: 
-        answer_seven: 
-        answer_six: 
-        answer_three: 
-        answer_two: 
-        heading: 
-        question_eight: 
-        question_five: 
-        question_four: 
-        question_nine: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_three: 
-        question_two: 
-      section_two:
-        answer_eight_bullet_one: 
-        answer_eight_bullet_three: 
-        answer_eight_bullet_two: 
-        answer_eight_first_part: 
-        answer_eight_second_part: 
-        answer_eleven: 
-        answer_fifteen: 
-        answer_five: 
-        answer_four_bullet_one: 
-        answer_four_bullet_two: 
-        answer_four_first_part: 
-        answer_four_second_part: 
-        answer_fourteen_bullet_one: 
-        answer_fourteen_bullet_three: 
-        answer_fourteen_bullet_two: 
-        answer_fourteen_first_part: 
-        answer_fourteen_second_part: 
-        answer_nine_bullet_five: 
-        answer_nine_bullet_four: 
-        answer_nine_bullet_one: 
-        answer_nine_bullet_three: 
-        answer_nine_bullet_two: 
-        answer_nine_first_part: 
-        answer_nine_second_part: 
-        answer_one: 
-        answer_seven_bullet_five: 
-        answer_seven_bullet_four: 
-        answer_seven_bullet_one: 
-        answer_seven_bullet_six: 
-        answer_seven_bullet_three: 
-        answer_seven_bullet_two: 
-        answer_seven_first_part: 
-        answer_seven_second_part: 
-        answer_six_bullet_five: 
-        answer_six_bullet_four: 
-        answer_six_bullet_one: 
-        answer_six_bullet_seven: 
-        answer_six_bullet_six: 
-        answer_six_bullet_three: 
-        answer_six_bullet_two: 
-        answer_six_first_part: 
-        answer_six_second_part: 
-        answer_sixteen_first_part: 
-        answer_sixteen_second_part: 
-        answer_ten: 
-        answer_thirteen: 
-        answer_three_bullet_one: 
-        answer_three_bullet_three: 
-        answer_three_bullet_two: 
-        answer_three_first_part: 
-        answer_three_second_part: 
-        answer_twelve_bullet_one: 
-        answer_twelve_bullet_three: 
-        answer_twelve_bullet_two: 
-        answer_twelve_first_part: 
-        answer_twelve_second_part: 
-        answer_two_bullet_five: 
-        answer_two_bullet_four: 
-        answer_two_bullet_one: 
-        answer_two_bullet_six: 
-        answer_two_bullet_three: 
-        answer_two_bullet_two: 
-        answer_two_first_part: 
-        answer_two_second_part: 
-        heading: 
-        question_eight: 
-        question_eleven: 
-        question_fifteen: 
-        question_five: 
-        question_four: 
-        question_fourteen: 
-        question_nine: 
-        question_one: 
-        question_seven: 
-        question_six: 
-        question_sixteen: 
-        question_ten: 
-        question_thirteen: 
-        question_three: 
-        question_twelve: 
-        question_two: 
       title: "أسئلة شائعة"
     home:
       how:
@@ -1528,6 +1363,19 @@ ar:
         street: Französische Straße 47
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
+  routes:
+    '404': 
+    datenschutzhinweise: 
+    definitions: 
+    emails: 
+    new: 
+    preview: 
+    rechtliche-hinweise: 
+    search_locations: 
+    subscribe: 
+    subscriptions: 
+    unsubscribe: 
+    update_requests: 
   shareds:
     forms:
       fill_field: "من فضلك إملأ هذه الخانة"
@@ -1541,14 +1389,11 @@ ar:
   simple_form:
     hints:
       contact:
-        new:
+        show:
           email: 
           message: 
           name: 
       search_form:
-        about:
-          query: 
-          search_location: 
         faq:
           query: 
           search_location: 
@@ -1558,24 +1403,17 @@ ar:
         index:
           query: 
           search_location: 
-        new:
-          query: 
-          search_location: 
-        not_found:
+        show:
           query: 
           search_location: 
       subscription:
-        about:
-          email: 
         faq:
           email: 
         home:
           email: 
         index:
           email: 
-        new:
-          email: 
-        not_found:
+        show:
           email: 
     required:
       html: 
