--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1890,18 +1890,26 @@ de:
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
   routes:
-    '404': 
-    datenschutzhinweise: 
-    definitions: 
-    emails: 
-    new: 
-    preview: 
-    rechtliche-hinweise: 
-    search_locations: 
-    subscribe: 
-    subscriptions: 
-    unsubscribe: 
-    update_requests: 
+    '404': 404
+    contacts: kontakt
+    datenschutzhinweise: datenschutzhinweise
+    definitions: definitions
+    emails: emails
+    faq: haeufige-fragen
+    haeufige-fragen: haeufige-fragen
+    impressum: impressum
+    new: new
+    offers: angebote
+    organizations: organisationen
+    preview: preview
+    rechtliche-hinweise: rechtliche-hinweise
+    search_locations: search_locations
+    subscribe: subscribe
+    subscriptions: subscriptions
+    ueber-uns: ueber-uns
+    unsubscribe: unsubscribe
+    update_requests: update_requests
+    users: nutzer
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
@@ -1916,13 +1924,13 @@ de:
     hints:
       contact:
         show:
-          email: 
-          message: 
-          name: 
+          email: NOTRANSLATE
+          message: NOTRANSLATE
+          name: NOTRANSLATE
       search_form:
         faq:
-          query: 
-          search_location: 
+          query: NOTRANSLATE
+          search_location: NOTRANSLATE
         home:
           query: 
           search_location: 
@@ -1930,17 +1938,17 @@ de:
           query: 
           search_location: 
         show:
-          query: 
-          search_location: 
+          query: NOTRANSLATE
+          search_location: NOTRANSLATE
       subscription:
         faq:
-          email: 
+          email: NOTRANSLATE
         home:
           email: 
         index:
           email: 
         show:
-          email: 
+          email: NOTRANSLATE
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
