localeapp pull to fix NOTRANSLATE in frontend

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1411,6 +1411,9 @@ ar:
         index:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
+        not_found:
+          query: 
+          search_location: 
         show:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
@@ -1421,6 +1424,8 @@ ar:
           email: NOTRANSLATE
         index:
           email: NOTRANSLATE
+        not_found:
+          email: 
         show:
           email: NOTRANSLATE
     required:
