--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1405,6 +1405,9 @@ pl:
         index:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
+        not_found:
+          query: 
+          search_location: 
         show:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
@@ -1415,6 +1418,8 @@ pl:
           email: NOTRANSLATE
         index:
           email: NOTRANSLATE
+        not_found:
+          email: 
         show:
           email: NOTRANSLATE
     required:
