--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1292,6 +1292,9 @@ tr:
         index:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
+        not_found:
+          query: 
+          search_location: 
         show:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
@@ -1302,6 +1305,8 @@ tr:
           email: NOTRANSLATE
         index:
           email: NOTRANSLATE
+        not_found:
+          email: 
         show:
           email: NOTRANSLATE
     required:
