--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1283,11 +1283,17 @@ tr:
           message: NOTRANSLATE
           name: NOTRANSLATE
       search_form:
+        agb:
+          query: 
+          search_location: 
         faq:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
         home:
           query: NOTRANSLATE
+          search_location: 
+        impressum:
+          query: 
           search_location: 
         index:
           query: NOTRANSLATE
@@ -1295,17 +1301,26 @@ tr:
         not_found:
           query: 
           search_location: 
+        privacy:
+          query: 
+          search_location: 
         show:
           query: NOTRANSLATE
           search_location: NOTRANSLATE
       subscription:
+        agb:
+          email: 
         faq:
           email: NOTRANSLATE
         home:
           email: NOTRANSLATE
+        impressum:
+          email: 
         index:
           email: NOTRANSLATE
         not_found:
+          email: 
+        privacy:
           email: 
         show:
           email: NOTRANSLATE
