--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1890,7 +1890,7 @@ de:
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
   routes:
-    '404': 
+    '404': "'404'"
     contacts: kontakt
     datenschutzhinweise: datenschutzhinweise
     definitions: definitions
@@ -1928,29 +1928,44 @@ de:
           message: 
           name: 
       search_form:
+        agb:
+          query: 
+          search_location: 
         faq:
           query: 
           search_location: 
         home:
           query: 
           search_location: 
+        impressum:
+          query: 
+          search_location: 
         index:
           query: 
           search_location: 
         not_found:
+          query: 
+          search_location: 
+        privacy:
           query: 
           search_location: 
         show:
           query: 
           search_location: 
       subscription:
+        agb:
+          email: 
         faq:
           email: 
         home:
           email: 
+        impressum:
+          email: 
         index:
           email: 
         not_found:
+          email: 
+        privacy:
           email: 
         show:
           email: 
