update localeapp _base

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -952,7 +952,7 @@ de:
     hints:
       update_request:
         index:
-          email: NOTRANSLATE
+          email: 
   js:
     ajax_error:
       error: Suchfehler
