--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -891,7 +891,7 @@ en:
     hints:
       update_request:
         index:
-          email: NOTRANSLATE
+          email: 
   js:
     ajax_error:
       error: Search error
